--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -342,3 +342,25 @@ body {
     text-decoration: none;
   }
 }
+
+.end-portfolio {
+  background-color: #202d3d;
+  padding: 10px 0;
+
+  &__copyrite {
+    font-family: "Inter";
+    line-height: 1.6;
+    color: #a1aab4;
+    font-size: 14px;
+    text-align: center;
+  }
+
+  .icon-footer {
+    width: 16px;
+    display: inline-block;
+    height: 16px;
+    vertical-align: -4px;
+    font-size: inherit;
+    color: #fb866a;
+  }
+}
