--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -7,7 +7,6 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Inter";
   font-weight: bold;
   margin: 0;
 }
@@ -39,10 +38,11 @@ body {
     font-size: 40px;
     margin: 0;
     margin-bottom: 10px;
+    font-family: "Open-Sans";
   }
 
   &__tagline {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-size: 24px;
     color: rgba(255, 255, 255, 0.7);
     margin-bottom: 15px;
@@ -50,7 +50,7 @@ body {
 
   &__bio {
     max-width: 662px;
-    font-family: "Inter";
+    font-family: "Open-Sans" !important;
     font-size: 16px;
     margin-bottom: 20px;
     color: rgba(255, 255, 255, 0.7);
@@ -66,7 +66,7 @@ body {
   }
 
   .btn {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-weight: bold;
     padding: 7px 16px 6px;
     height: 40px;
@@ -87,11 +87,11 @@ body {
   }
 
   &__btn-resume {
-    background-color: #797575;
+    border: 1px solid #5ecca9;
 
     &:hover {
       color: white;
-      background-color: #535050;
+      background-color: #2c775f;
     }
   }
 
@@ -118,7 +118,7 @@ body {
   border-bottom: 1px solid rgba(255, 255, 255, 0.05);
 
   .title {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-weight: bold;
     font-size: 32px;
     position: relative;
@@ -137,7 +137,7 @@ body {
   }
 
   &__intro {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     color: rgba(255, 255, 255, 0.7);
     font-size: 16px;
     margin-bottom: 35px;
@@ -195,7 +195,7 @@ body {
   }
 
   &__title-skill {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-size: 16px;
     font-weight: bold;
   }
@@ -217,7 +217,7 @@ body {
     flex-direction: column;
     justify-content: center;
     overflow: hidden;
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-size: 11px;
     color: white;
     text-align: center;
@@ -249,7 +249,7 @@ body {
   }
 
   .title {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-weight: bold;
     font-size: 32px;
     position: relative;
@@ -277,7 +277,7 @@ body {
   }
 
   &__work-title {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-weight: bold;
     font-size: 21px;
     margin-bottom: 9px;
@@ -303,7 +303,7 @@ body {
   }
 
   &__description {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     color: rgba(255, 255, 255, 0.7);
   }
 
@@ -314,7 +314,7 @@ body {
   }
 
   &__btn {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     font-weight: bold;
     padding: 7px 16px 6px;
     height: 40px;
@@ -354,7 +354,7 @@ body {
   padding: 10px 0;
 
   &__copyrite {
-    font-family: "Inter";
+    font-family: "Open-Sans";
     line-height: 1.6;
     color: #a1aab4;
     font-size: 14px;
