--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -32,6 +32,7 @@ body {
     display: flex;
     flex-direction: row;
     justify-content: space-between;
+    align-items: center;
   }
 
   &__name {
@@ -59,6 +60,7 @@ body {
   .image {
     max-width: 400px;
     max-height: 300px;
+    border-radius: 50%;
   }
 
   &__button {
@@ -99,12 +101,21 @@ body {
     display: inline-block;
     width: 25px;
     height: 25px;
-    font-size: 25px;
-    margin-right: 15px;
-    color: white;
+    margin-right: 20px;
+    color: #5ecca9;
     transition: all 0.3s ease;
+    &:last-child {
+      margin: 0;
+    }
+    i {
+      vertical-align: middle;
+      &::before {
+        font-size: 25px;
+        margin: 0;
+      }
+    }
     &:hover {
-      color: gray;
+      color: white;
     }
   }
 
@@ -123,7 +134,7 @@ body {
     font-size: 32px;
     position: relative;
     padding-left: 24px;
-    margin-bottom: 16px;
+    margin-bottom: 40px;
     &::before {
       content: "";
       display: inline-block;
@@ -136,12 +147,6 @@ body {
     }
   }
 
-  &__intro {
-    font-family: "Open-Sans";
-    color: rgba(255, 255, 255, 0.7);
-    font-size: 16px;
-    margin-bottom: 35px;
-  }
   .link-skill {
     text-decoration: none;
     color: #5ecca9;
@@ -298,6 +303,10 @@ body {
     object-fit: cover;
   }
 
+  .gravity {
+    object-fit: fill;
+  }
+
   .text-wrap {
     margin-bottom: 15px;
   }
@@ -326,7 +335,7 @@ body {
   }
 
   .live {
-    margin-right: 10px;
+    margin-right: 15px;
     background-color: #5ecca9;
 
     &:hover {
@@ -336,11 +345,11 @@ body {
   }
 
   .source {
-    background-color: #797575;
+    border: 1px solid #5ecca9;
 
     &:hover {
       color: white;
-      background-color: #535050;
+      background-color: #2c775f;
     }
   }
 
@@ -356,18 +365,9 @@ body {
   &__copyrite {
     font-family: "Open-Sans";
     line-height: 1.6;
-    color: #a1aab4;
+    color: white;
     font-size: 14px;
     text-align: center;
-  }
-
-  .icon-footer {
-    width: 16px;
-    display: inline-block;
-    height: 16px;
-    vertical-align: -4px;
-    font-size: inherit;
-    color: #fb866a;
   }
 }
 
@@ -379,13 +379,14 @@ body {
 
     &__wrap {
       margin-bottom: 60px;
-      &:last-child {
-        margin: 0;
-      }
     }
 
     .text-wrap {
       margin-bottom: 23px;
+    }
+
+    .gravity {
+      object-fit: fill;
     }
   }
 }
@@ -412,6 +413,14 @@ body {
       &:nth-last-child(2n + 1) {
         margin: 0;
       }
+    }
+  }
+}
+
+@media only screen and (max-width: 768px) {
+  .my-portfolio {
+    .gravity {
+      object-fit: cover;
     }
   }
 }
