--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -363,11 +363,16 @@ body {
   padding: 10px 0;
 
   &__copyrite {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+
+  &__title {
     font-family: "Open-Sans";
     line-height: 1.6;
     color: white;
     font-size: 14px;
-    text-align: center;
   }
 }
 
