add react and redux

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -190,10 +190,12 @@ body {
     width: 27px;
     height: 30px;
     margin-right: 5px;
+    color: #61dafb;
   }
   .icon-redux {
     width: 27px;
     height: 30px;
+    color: #764abc;
   }
   .icon-gulp {
     width: 15px;
